# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2009; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha74.ebuild, -sun-jdk-1.7.0.0_alpha72.ebuild:
  Bump

  12 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.6.0.18_beta3.ebuild, sun-jdk-1.7.0.0_alpha73.ebuild:
  1.6: version bump. 1.7: add missing gcc-4.2 dependency (bug #267495), amd64
  plugin (bug #287802) and x86 plugin2.

  02 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.14_beta5.ebuild, -sun-jdk-1.6.0.14_beta6.ebuild,
  +sun-jdk-1.6.0.18_beta2.ebuild:
  Bump new 1.6 early access.

  02 Oct 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha71.ebuild, +sun-jdk-1.7.0.0_alpha73.ebuild:
  Bump

  17 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha70.ebuild, +sun-jdk-1.7.0.0_alpha72.ebuild:
  Bump

  07 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha68.ebuild, +sun-jdk-1.7.0.0_alpha71.ebuild:
  Bump

  23 Aug 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha67.ebuild, +sun-jdk-1.7.0.0_alpha70.ebuild:
  Bump

  10 Aug 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha66.ebuild, +sun-jdk-1.7.0.0_alpha68.ebuild:
  Bump
 
  03 Aug 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha65.ebuild, +sun-jdk-1.7.0.0_alpha67.ebuild:
  Bump

  29 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha64.ebuild, +sun-jdk-1.7.0.0_alpha66.ebuild:
  Bump

  21 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha62.ebuild, +sun-jdk-1.7.0.0_alpha65.ebuild:
  Bump

  14 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha61.ebuild, +sun-jdk-1.7.0.0_alpha64.ebuild:
  Bump

  26 Jun 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha60.ebuild, +sun-jdk-1.7.0.0_alpha62.ebuild:
  Bump
