@@ -9,9 +9,9 @@ DIST jdk-7-ea-bin-b73-linux-i586-01_oct_2009.bin 89620307 RMD160 e17e5990c882490
 DIST jdk-7-ea-bin-b73-linux-x64-01_oct_2009.bin 88992644 RMD160 1c4fd5e2086f343fc5c357accdb65fa3b4e2f273 SHA1 89d28840538fad22e742c80278cc2c44323d53a5 SHA256 5132f797953dc1e275bcdf21a5c06758b3fb07adc797c43423bdb1e74aefaf3c
 DIST jdk-7-ea-bin-b74-linux-i586-15_oct_2009.bin 89660779 RMD160 346626dc47744f222fffe8f6786fa6a6a9af7dce SHA1 ec9c81838163eab53f55a6574d1ba7e240eac090 SHA256 a88032f77fae4edffbcfeebb5a51f473a2bb1a008952570459c9590a9d6521ca
 DIST jdk-7-ea-bin-b74-linux-x64-15_oct_2009.bin 89026797 RMD160 e6b1dfa6ea479a638957b78a05455d3e7523802c SHA1 d48b902113e10a00e4f6b249e3f4c24fc4f2fa2b SHA256 399545a1991f67ff294398b2b21e5b26b9f328f59870adeb9e77491ad61d1e9e
-EBUILD sun-jdk-1.6.0.18_beta2.ebuild 5660 RMD160 b66ee0639f397ba7e9434145b88521b1199c3b91 SHA1 c072d4b915500e6f0e1c09b8db856251023b607b SHA256 3346e658827d3a8f57caf69a7060dc4565e11dad59277c261dabad50982cd70b
-EBUILD sun-jdk-1.6.0.18_beta3.ebuild 5660 RMD160 2d94f5bcd7e9c9be01385321c1c761f3de442716 SHA1 9a764476bee5f2b9420e5e61dcbafeb80a9f96cd SHA256 d4996b6ead0e07b26184bbefce26f64afb022c1839f1250c9c785e7edd22a4da
+EBUILD sun-jdk-1.6.0.18_beta2.ebuild 5659 RMD160 85de996f9160f9c40508dd7d95309e0a7164ee61 SHA1 3f0236cf985dc077210d4bafc694e40a575bb1fc SHA256 0b4cbf8d8727ca8ec90589c8385ceafece85243a55818e86460b36fa52d3d1c2
+EBUILD sun-jdk-1.6.0.18_beta3.ebuild 5462 RMD160 1161e5e0515c1e50d6cef36000ce3f05dfc4f49e SHA1 6e76c8b94b1618adb06855686c33d61c90397497 SHA256 cb202a8b61f9bf2844163d84ffe39652b5da85d26c23afc6f304e172475f340f
 EBUILD sun-jdk-1.7.0.0_alpha73.ebuild 5390 RMD160 642e7d1c0b9917c2e96eea36e9560436b9def60c SHA1 7c376707fc5370d53569ca2b917abe261442242e SHA256 db89f97b622204e8bf149fccbed81788b8b7346cfe2eab9259fc2720616ddc1b
-EBUILD sun-jdk-1.7.0.0_alpha74.ebuild 5390 RMD160 bbb86ac4d2dc0cf752e59daf339be6447a4acc18 SHA1 ffce2e08ebe591fc5afbd0ff87a8a5705c966692 SHA256 5937cd3b7f5cdb5edfca61bbf30a047d5b901259cdd3e6093fe7e45e69580a55
-MISC ChangeLog 16090 RMD160 98865534996c767f6660a7ecb75db433a6624e48 SHA1 1b7c96ecfca6f1d13f999e19602bdd85ad507585 SHA256 ad77c134513874daa619cd3cb912a547e16265e38153467ff996c3db335ed889
+EBUILD sun-jdk-1.7.0.0_alpha74.ebuild 5183 RMD160 3f774eb01e66a23097a92714d8055e99c5fbd768 SHA1 250ce724c21f0a3135571bc4555bc284d3e5ab6e SHA256 f839588e40b4d7225fb0bc8ab1917566c948714aaa45cba16d97b994f999f4b0
+MISC ChangeLog 16314 RMD160 2bdbae325b8acd662183d00771c444db31af85ce SHA1 8759ecc1a118857963d0406a6b760ab6c365c6b4 SHA256 3662ce2d471a1a9e9f6e0e2f53e9b6706774c00a6bc27497d096f5907acf2376
 MISC metadata.xml 229 RMD160 cfb20c76828370afd4aa3509e82d73dc01868ad8 SHA1 c70889a83225d08e4c97480a577c26e07466d714 SHA256 552df738ffd9f53ff574607e8c1ed60920f2b20a73dedc4f200892f58c323a93
